[package]
name = "gdrust-trinkets"
version = "0.1.1"
edition = "2024"
license = "Unlicense"
authors = ["Jack Hamilton jackham800@gmail.com"]
keywords = ["godot"]
categories = ["game-development"]
repository = "https://github.com/jackhamilton/gdrust-trinkets"
description = "A collection of useful controls, traits, and macros for godot x rust development."

[dependencies]
freezable-macros = "0.1.0"
freezable-trait = "0.1.5"
godot = "0.3.5"
serde = "1.0.219"
serde_json = "1.0.143"
